@@ -7,7 +7,7 @@
 #' @param weighted Logical. TRUE computes shortest path in terms of road length. FALSE computes shortest path in terms of the number of nodes.
 #' @param case.set Character. "observed", "expected", or "snow".
 #' @param multi.core Logical or Numeric. TRUE uses parallel::detectCores(). FALSE uses one, single core. You can also specify the number logical cores. On Window, only "multi.core = FALSE" is available.
-#' @param unit Character. Unit of measurement: "meter" or "yard". Default is NULL, which returns the map's native scale. Meaningful only when "weighted" is TRUE and "output" is "distance". See \code{vignette("roads")} for information on unit distances.
+#' @param unit Character. Unit of distance: "meter", "yard" or "native". "native" returns the map's native scale. Meaningful only when "weighted" is TRUE and "output" is "distance". See \code{vignette("roads")} for information on unit distances.
 #' @param time.unit Character. "hour", "minute", or "second".
 #' @param walking.speed Numeric. Default walking speed is 5 km/hr.
 #' @note Time is computed using distanceTime().
@@ -15,7 +15,7 @@
 #' @return An R data frame or list of 'igraph' paths.
 
 nearestPump <- function(pump.select = NULL, output = "distance", vestry = FALSE,
-  weighted = TRUE, case.set = "observed", unit = NULL, multi.core = FALSE,
+  weighted = TRUE, case.set = "observed", unit = "meter", multi.core = FALSE,
   time.unit = "second", walking.speed = 5) {
 
   if (output %in% c("distance", "path") == FALSE) {
@@ -26,9 +26,8 @@ nearestPump <- function(pump.select = NULL, output = "distance", vestry = FALSE,
     stop('"case.set" must be "observed", "expected" or "snow".')
   }
 
-  if (is.null(unit) == FALSE) {
-    if (unit %in% c("meter", "yard") == FALSE)
-      stop('If specified, "unit" must either be "meter" or "yard".')
+  if (unit %in% c("meter", "yard", "native") == FALSE) {
+    stop('If specified, "unit" must be "meter", "yard" or "native".')
   }
 
   cores <- multiCore(multi.core)
@@ -80,12 +79,12 @@ nearestPump <- function(pump.select = NULL, output = "distance", vestry = FALSE,
     out$time <- cholera::distanceTime(out$distance, unit = time.unit,
       speed = walking.speed)
 
-    if (!is.null(unit)) {
-      if (unit == "meter") {
-        out$distance <- cholera::unitMeter(out$distance, "meter")
-      } else if (unit == "yard") {
-        out$distance <- cholera::unitMeter(out$distance, "yard")
-      }
+    if (unit == "meter") {
+      out$distance <- cholera::unitMeter(out$distance, "meter")
+    } else if (unit == "yard") {
+      out$distance <- cholera::unitMeter(out$distance, "yard")
+    } else if (unit == "native") {
+      out$distance <- cholera::unitMeter(out$distance, "native")
     }
 
     out
