@@ -9,7 +9,7 @@ unitMeter(x, unit = NULL, yard.unit = 177/3, meter.unit = 54)
 \arguments{
 \item{x}{Numeric. Nominal map distance.}
 
-\item{unit}{Character. Unit of measurement: "meter" or "yard". Default is NULL, which returns the map's native scale. See \code{vignette("roads")} for information on conversion.}
+\item{unit}{Character. Unit of distance: "meter", "yard" or "native". "native" returns the map's native scale. See \code{vignette("roads")} for information on conversion.}
 
 \item{yard.unit}{Numeric. Estimate of yards per map unit: 177 / 3.}
 
